--- a/src/component/recSec.css
+++ b/src/component/recSec.css
@@ -56,6 +56,9 @@
 }
 
 @media (max-width: 991px) {
+  .nextBtn {
+    display: none;
+  }
   .RecSecDiv {
     flex-direction: row;
     gap: 0;
